# backend/docs/swagger.json
@@ -1248,7 +1248,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ent.Doctorinfo"
+                            "$ref": "#/definitions/controllers.Doctorinfo"
                         }
                     }
                 ],
@@ -4504,6 +4504,41 @@
                     "type": "integer"
                 },
                 "unpaybill": {
+                    "type": "integer"
+                }
+            }
+        },
+        "controllers.Doctorinfo": {
+            "type": "object",
+            "properties": {
+                "department": {
+                    "type": "integer"
+                },
+                "doctorname": {
+                    "type": "string"
+                },
+                "doctorsurname": {
+                    "type": "string"
+                },
+                "educationlevel": {
+                    "type": "integer"
+                },
+                "licensenumber": {
+                    "type": "string"
+                },
+                "officeroom": {
+                    "type": "integer"
+                },
+                "prename": {
+                    "type": "integer"
+                },
+                "registrar": {
+                    "type": "integer"
+                },
+                "telephonenumber": {
+                    "type": "string"
+                },
+                "user": {
                     "type": "integer"
                 }
             }
